# transcription

./: .env.example  .gitignore  README.md  VERIFICATION.md  app.py  check_quota.py  groq-speech-to-text-docs.md  groq_key_manager.py  main.py  pyproject.toml  requirements.txt  worker.py
plans/: Audio-Transcript Codebase Improvement Plan.md  output-modifications-plan.md  phase1-security-reliability.md  phase2-code-consolidation.md  phase3-performance-scalability.md  phase4-error-handling-robustness.md  phase5-configuration-dependencies.md  phase6-testing-improvements.md  phase7-documentation-observability.md  round-robin-design.md
src/audio_transcript/: __init__.py  config.py  logging_utils.py
src/audio_transcript/api/: app.py  auth.py  errors.py  routes.py
src/audio_transcript/domain/: errors.py  models.py
src/audio_transcript/infra/: queue.py  repository.py  runtime_state.py  storage.py
src/audio_transcript/infra/providers/: base.py  groq.py  mistral.py  whisper_cpp.py
src/audio_transcript/services/: audio.py  router.py  transcription.py
src/audio_transcript/worker/: runner.py
tests/: conftest.py  test_api.py  test_audio.py  test_audio_integration.py  test_audio_merge.py  test_config.py  test_logging.py  test_providers.py  test_redis_integration.py  test_repository.py  test_repository_integration.py  test_router.py  test_service.py  test_storage.py  test_whisper_cpp.py
transcript_dataset/provider=groq/year=2026/month=03/day=23/7b9635de-cfc0-4c55-8aef-3cbfac8f1084/: segments.parquet  summary.parquet
